# CloneWhatYouHear

./: AudioDevice.cpp  AudioDevice.h  CMakeLists.txt  CloneAudio.cpp  CloneAudio.h  ErrorCheck.cpp  ErrorCheck.h  Forward.h  Resampler.cpp  Resampler.h  ResourceHolders.cpp  ResourceHolders.h  main.cpp  uuids.cpp
